# aloe

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.setup.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src/components/: ExportChoiceDialog.tsx  LoadingOverlay.tsx  PDFUploader.tsx  PasswordDialog.tsx  SplitDialog.tsx  StatusDialog.tsx  ThumbnailGrid.tsx  Toolbar.tsx
src/types/: pdfjs.d.ts
src/utils/: pdfPreview.ts  pdfUtils.test.ts  pdfUtils.ts  zipUtils.ts
