[package]
name = "zen-pdf-editor"
version = "0.1.0"
edition = "2021"
description = "Zen PDF — offline PDF editor built with Tauri and React"
authors = ["Aloe Contributors"]
license = "Apache-2.0"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = [ "fs-read-file", "fs-write-file", "dialog-all", "shell-open"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
